--- a/front.html
+++ b/front.html
@@ -61,10 +61,10 @@
                                             <div class="modal-content">
                                                 <span class="close">&times;</span>
                                                 <p>Learn Addition of Numbers here!</p>
-                                                value1=<input type="text" class="value1" name="value1" value=""/>
-                                                value2=<input type="text" class="value2" name="value2" value=""/>
-                                                answer=<input type="text" class="answer" name="answer" value=""/>
-                                                <button class="btn">Add</button>
+                                                value1 = <input type="text" id="value1" name="value1" value=""/>
+                                                value2 = <input type="text" id="value2" name="value2" value=""/>
+                                                <input type="button" name="Sumbit" value="+" onclick="javascript:addNumbers()"/>
+                                                Answer = <input type="text" id="answer" name="answer" value=""/>
                                             </div>
                                     
                                         </div>
