--- a/front.html
+++ b/front.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport"
       content="width=device-width, initial-scale=1" />
-        <title>Fun with Math</title>
+        <title>Math-O-logy</title>
         <link rel="stylesheet" href="stylesheet.css">
         <script src="https://kit.fontawesome.com/63730d755c.js" crossorigin="anonymous"></script>
         
@@ -13,7 +13,7 @@
     <body>
         <header>
             <div class="header-left">
-                <div class="header-logo">Fun with Math!</div>
+                <div class="header-logo">Math-O-logy</div>
                 <div class="header-list">
                     <ul>
                         <li>About</li>
@@ -26,18 +26,13 @@
         </header>
         <div class="top-wrapper">
             <div class="container">
-                <h1>Learn Maths with <span>Fun !</span></h1>
-                <p>We hope your visit here brings you a greater love of mathematics!!</p><p> <span>Albert Einstein(1879-1955):</span>, 
-                    Do not worry about your difficulties in mathematics, I assure you that mine are greater.
-
-                </p>
+                <h1>Math-<span>O</span>-logy</h1>
+                <p>We hope your visit here brings you a greater love of mathematics!!</p>
             </div>
             <div class="btn-wrapper">
-                <a href="#" class="btn signup">Sign-up with Email</a>
-                <p>or</p>
                 <a href="#" class="btn facebook">
                     <i class="fab fa-facebook-f"></i>
-                    Sign-up with Facebook
+                    Follow us on Facebook
                 </a>
                 <a href="#" class="btn instagram">
                     <i class="fab fa-instagram"></i>
